[tool.poetry]
name = "test_program"
version = "0.1.0"
description = ""
authors = ["Christopher W Quintal"]

[tool.poetry.dependencies]
python = "3.8"
PySide6 = "^6.2.0"
rpyc = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
